# dabs_cicd_pipelines

./: README.md
.github/workflows/: deploy-pipeline-prod.yml  deploy-pipeline-stage.yml
databricks_pipelines/project_01/: README.md  databricks.yml  pyproject.toml
databricks_pipelines/project_01/resources/: sample_job.job.yml
databricks_pipelines/project_01/src/: sample_notebook.py
databricks_pipelines/project_02/: .gitignore  README.md  databricks.yml  pyproject.toml
databricks_pipelines/project_02/resources/: sample_job.py
databricks_pipelines/project_02/src/project_02/: main.py
databricks_pipelines/project_interface/: README.md  databricks.yml  pyproject.toml
databricks_pipelines/project_interface/resources/: project_interface_etl.pipeline.yml  sample_job.job.yml
databricks_pipelines/project_interface/src/project_interface_etl/: README.md
databricks_pipelines/project_interface/src/project_interface_etl/transformations/: sample_trips_project_interface.sql  sample_zones_project_interface.sql
databricks_pipelines/project_local/: README.md  databricks.yml  pyproject.toml
databricks_pipelines/project_local/resources/: project_local_etl.pipeline.yml  sample_job.job.yml
databricks_pipelines/project_local/src/project_local/: main.py
databricks_pipelines/project_local/src/project_local_etl/: README.md
databricks_pipelines/project_local/src/project_local_etl/transformations/: sample_trips_project_local.py  sample_zones_project_local.py
databricks_pipelines/project_local/tests/: sample_taxis_test.py
